added styles for portfolio page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,14 @@
 body {
     font-family: 'Roboto', sans-serif;
+    color: var(--text-color);
 }
+:root {
+  --accent-color:#2196F3;
+  --title-color:#212121;
+  --text-color:#757575;
+  --white-color:#FFFFFF;
+}
+
 /*color: #212121;*/
 /* color: #2196F3;*/
 /*color: #757575;*/
@@ -13,7 +21,7 @@ font-size: 26px;
 line-height: 1.19;
 letter-spacing: 0.03em;
 text-decoration:none;
-color: #2196F3;
+color: var(--accent-color);
 }
 .log-studio{
     color: #000000;   
@@ -26,26 +34,157 @@ font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
-color: #212121;
 text-decoration:none;
   }
   .header-link {
     text-decoration:none;
+    color: var(--title-color);
   }
-  .header-link:hover {
-    color: #2196F3;
+  .header-link:hover, .header-link:focus {
+    color: var(--accent-color);
   }
   .contacts-mail, .contacts-tel{
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.02em;
-    color: #757575;
+    color: var(--text-color);
     text-decoration:none;
   }
-  .contacts-mail:hover {
-    color: #2196F3;
+  .contacts-mail:hover, .contacts-mail:focus {
+    color: var(--accent-color);
   }
-  .contacts-tel:hover {
-    color: #2196F3;
+  .contacts-tel:hover, .contacts-tel:focus {
+    color: var(--accent-color);
   }
+/*------------HERO--------------*/
+.hero-title {
+font-weight: 900;
+font-size: 44px;
+line-height: 1.36;
+text-align: center;
+letter-spacing: 0.06em;
+text-transform: uppercase;
+color: var(--white-color);
+background-color: rgb(227, 205, 63);
+}
+
+.button{
+background-color: var(--accent-color);
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+color: var(--white-color);
+}
+/*---------Section features-------*/
+.features-name {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.features-title {
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--title-color);
+}
+.features-text {
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+}
+.work-title, .team-title{
+font-weight: 700;
+font-size: 36px;
+line-height: 1.17;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--title-color);
+}
+/*------------OUR TEAM---------*/
+.employee-name {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.19;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--title-color);
+}
+.employee-position{
+font-weight: 400;
+font-size: 16px;
+line-height: 1.19;
+text-align: center;
+letter-spacing: 0.03em;
+}
+/*-------FOOTER-------*/
+.log-white{
+  color: var(--white-color);
+}
+.footer{
+  background-color: #2F303A;
+}
+.address-map {
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: var(--white-color);
+text-decoration:none;
+}
+.address-mail, .address-tel {
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: rgba(255, 255, 255, 0.6);
+text-decoration:none;
+}
+/*-----------PORTFOLIO PAGE--------------*/
+.portfolio {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.button-portfolio {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.62;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--title-color);
+background: #F5F4FA;
+}
+.button-portfolio:hover, .button-portfolio:focus {
+  color: var(--white-color);
+  background: var(--accent-color);
+}
+.projects-title {
+font-weight: 700;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;
+color: var(--title-color);
+}
+.projects-text { 
+font-weight: 400;
+font-size: 16px;
+line-height: 1.88;
+letter-spacing: 0.03em;
+}
